Move configuration classes from rune-lang to rune-runtime (#1256)
Move the com.regnosys.rosetta.config[.file].* configuration classes and the
ExperimentalFeature enum from rune-lang into rune-runtime (package names
unchanged), so that an IDE or tool depending only on rune-runtime can read
Rune configuration. RosettaConfigExtension and ExperimentalFeatureService
remain in rune-lang as they depend on EMF.

rune-runtime targets Java 8 and mandates javax.inject (see issue #938), so the
moved classes are adapted accordingly: List.of/Path.of replaced with Java 8
equivalents, and the jakarta.inject usages converted to javax.inject. The
RosettaConfiguration provider binding in RosettaRuntimeModule is now wired
explicitly through the Guice Binder, since Xtext's provide* convention is
typed to jakarta.inject. Adds jackson-dataformat-yaml and slf4j-api to
rune-runtime.

No behaviour change.

(cherry picked from commit c1066148e100fd0aab786c02774582e836c98321)